Worked on contact me button

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,26 @@ footer {
   text-align: center;
 }
 .Container {
+  padding: 90px;
   background-color: #f8e7e7;
+  text-align: center;
+}
+
+.contact-btn {
+  display: inline-block;
+  background-color: azure;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  padding: 16px 32px;
+  margin-top: 32px;
+  color: #a070a1;
+  transition: ease-in-out 0.3s;
+}
+
+.contact-btn:hover {
+  background-color: #a070a1;
+  color: azure;
 }
 
 .index-page-titles {
