--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,32 @@ h3 {
   opacity: 0.7;
 }
 
+nav {
+  padding: 20px 0;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 50px;
+  margin-left: 15px;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
+  transition: all 100ms ease-in-out;
+}
+
+nav a:hover,
+nav li.active a {
+}
+
 .developer-statement {
   text-align: center;
   padding: 40px;
